layout.css
* {
    box-sizing: border-box;
}

.main {
    background-color: #f1f1f1;
    padding: 20px;
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;
}


/* Use a media query to add a break point at 800px: */
@media screen and (max-width: 800px) {
    .main {
        width: 100%;
        /* The width is 100%, when the viewport is 800px or smaller */
        font-size:10vw;
    }
}

